Fix expanded view not showing all the text.

--- a/server/wwwroot/css/site.css
+++ b/server/wwwroot/css/site.css
@@ -25,13 +25,6 @@
     z-index: 9;
     padding: 5px;
 }
-.expanded-view{
-    height: 100vh;
-    margin-left: auto;
-    margin-right: auto;
-    color: black;
-    padding: 1%;
-}
 .cv-button{
     background-color: black;
     color: white;
